# Phllama.so

./: .gitignore  .gitmodules  CMakeLists.txt  HARDWARE_VALIDATION_REPORT.md  Makefile  README.md  RELEASE_NOTES.md  build.sh  llama_interface.cpp  llama_interface.h  main.cpp  ollama_interface.cpp  ollama_interface.h  phllama.ini  test.php  test_basic.php  test_functionality.php  test_model.php  validate_install.sh  version.h
.claude/: todo.md
